nullaway_error_27f059df-7072-4170-a7b4-9d677555931f.txt
Stopping file watching and invalidating VFS after an error happened
/home/nima/Developer/nullness-benchmarks/eureka/eureka-core/src/main/java/com/netflix/eureka/cluster/protocol/ReplicationInstance.java:117: error: [NullAway] initializer method does not guarantee @NonNull fields appName (line 109), id (line 110), instanceInfo (line 114), action (line 115) are initialized along all control-flow paths (remember to check for exceptions or early returns).
        private ReplicationInstanceBuilder() {
                ^
